listings/ch18-patterns-and-matching/listing-18-08/output.txt
$ cargo run
   Compiling patterns v0.1.0 (file:///projects/patterns)
error[E0005]: refutable pattern in local binding: `None` not covered
 --> src/main.rs:3:9
  |
3 |     let Some(x) = some_option_value;
  |         ^^^^^^^ pattern `None` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
error: Could not compile `patterns`.

To learn more, run the command again with --verbose.
